# nucleotide

./: Cargo.toml  README.md
assets/specs/enemies/: armadillo.json  boa_constrictor.json  enemy.json  example_enemy.json  scorpion.json
assets/specs/genes/: block.json  constrict.json  example_gene.json  repeat_codon.json  reverse.json  reverse_codon.json  sting.json  stomp.json
assets/specs/status_effects/: constricted.json  poison.json  repeat_gene.json  running_away.json  skipping.json  weak.json
src/: main.rs
src/game/: assets.rs  battle.rs  constants.rs  events.rs  input.rs  map.rs  meta.rs  mod.rs  pause.rs  resources.rs  specs.rs  ui.rs  ui_state.rs
