[package]
name = "nucleotide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
bevy_egui = "0.21.0"
egui = "0.22.0"
rand = "0.8.5"
serde = "1.0.159"
serde_json = "1.0.95"
petgraph = "0.6.3"
bevy_mod_raycast = "0.9.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
